organized js file. Ab test changes.

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
           </div>
 
           <div class="col-md-6 right-col">
-            <p><div class="bg_image"></div></p>
+            <p><div id="bg_image"></div></p>
             <p><input type="submit" id="user_submit" class="button medium"></input></p>
           </div>
         </form>
