Refined js and less

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 </select>                    
               </div> 
 
-              <div class="form-group floating-label-form-group col-50">
+              <div class="form-group floating-label-form-group col-50 address">
                 <label for="zipcode">Zip Code</label>
                 <input id ="user_address" class="form-control" type="text" name="zipcode" placeholder="Zip Code" />                      
               </div> 
@@ -93,6 +93,6 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   </div>  
 </div>
 
-<script src="dist/js/compiled.min.js"></script>
+<script type="text/javascript" src="dist/js/compiled.min.js"></script>
 </body>
 </html>
