--- a/index.html
+++ b/index.html
@@ -23,73 +23,73 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   <h2>A/B Testing Project</h2>
   <!-- Trigger the modal with a button -->
   <div class="text-center">
-    <button id="modal-btn" class="demo btn btn-primary btn-large" data-toggle="modal" href="#responsive">Button</button>
+    <button id="modal-btn" class="demo btn btn-primary btn-large" data-toggle="modal" href="#responsive">Modal Button</button>
   </div>
 
-  <div id="responsive" class="modal fade" tabindex="-1" data-width="760" style="display: none;">
-    <div class="modal-header">
-      <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-    </div>
-    <div class="modal-body">
-      <div class="row">
-        <form id="userForm" method="post" class="form-horizontal">
-          <div class="col-md-6">
+  <div id="responsive" class="modal fade" tabindex="-1" data-width="760">
+    <div class="modal-dialog">
 
-            <div class="form-group floating-label-form-group">
-              <label for="name">Name</label>
-              <input id ="user_name" class="form-control" type="text" name ="name" placeholder="Name" />
-              <div class="error">Please enter a name</div>
-            </div>
+    <!-- Modal content-->
+      <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+        </div> 
+        <div class="modal-body">
+          <div class="row">
+            <form id="userForm" method="post" class="form-horizontal">
+              <div class="col-md-6">
 
-            <div class="form-group floating-label-form-group">
-              <label for="email">Email</label>
-              <input id ="user_email" class="form-control" type="email" name="email" placeholder="Email" />     
-            </div>  
+                <div class="form-group floating-label-form-group">
+                  <label for="name">Name</label>
+                  <input id ="user_name" class="form-control" type="text" name ="name" placeholder="Name" />
+                  <div class="error">Please enter a name</div>
+                </div>
 
-            <div class="form-group floating-label-form-group">
-              <label for="phone">Phone</label>
-              <input id ="user_phone" class="form-control" type="phone" name="phone" placeholder="Phone" />           
-            </div>     
+                <div class="form-group floating-label-form-group">
+                  <label for="email">Email</label>
+                  <input id ="user_email" class="form-control" type="email" name="email" placeholder="Email" />     
+                </div>  
 
-            <div class="form-group floating-label-form-group">
-              <label for="address">Address</label>
-              <input id ="user_address" class="form-control" type="text" name="address" placeholder="Address" />                      
-            </div>    
+                <div class="form-group floating-label-form-group">
+                  <label for="phone">Phone</label>
+                  <input id ="user_phone" class="form-control" type="phone" name="phone" placeholder="Phone" />           
+                </div>     
 
-            <div class="form-group floating-label-form-group">
-              <label for="city">City</label>
-              <input id ="user_city" class="form-control" type="text" name="city" placeholder="City" />                     
-            </div> 
+                <div class="form-group floating-label-form-group">
+                  <label for="address">Address</label>
+                  <input id ="user_address" class="form-control" type="text" name="address" placeholder="Address" />                      
+                </div>    
 
-            <div>
-              <div class="form-group floating-label-form-group col-50">
-                <label for="state">State</label>
-                <select id ="user_state" class="form-control selectpicker" name="state" placeholder="State"> 
-                  <option default selected>State</option>
-                  <option value="TX">Texas</option>
-                  <option value="LA">Louisiana</option>
-                </select>                    
-              </div> 
+                <div class="form-group floating-label-form-group">
+                  <label for="city">City</label>
+                  <input id ="user_city" class="form-control" type="text" name="city" placeholder="City" />                     
+                </div> 
 
-              <div class="form-group floating-label-form-group col-50 address">
-                <label for="zipcode">Zip Code</label>
-                <input id ="user_address" class="form-control" type="text" name="zipcode" placeholder="Zip Code" />                      
-              </div> 
-            </div> 
+                <div>
+                  <div class="form-group floating-label-form-group col-50 select">
+                    <label for="state">State</label>
+                    <select id ="user_state" class="form-control selectpicker" name="state" placeholder="State"> 
+                      <option default selected>State</option>
+                      <option value="TX">Texas</option>
+                      <option value="LA">Louisiana</option>
+                    </select>                    
+                  </div> 
+
+                  <div class="form-group floating-label-form-group col-50 address">
+                    <label for="zipcode">Zip Code</label>
+                    <input id ="user_address" class="form-control" type="text" name="zipcode" placeholder="Zip Code" />                      
+                  </div> 
+                </div> 
+              </div>
+              <div class="col-md-6 right-col">
+                <p><div id="bg_image"></div></p>
+                <p><input type="submit" id="user_submit" class="button medium" value ="Submit"></input></p>
+              </div>
+            </form>
           </div>
-
-          <div class="col-md-6 right-col">
-            <p><div id="bg_image"></div></p>
-            <p><input type="submit" id="user_submit" class="button medium"></input></p>
-          </div>
-        </form>
-
+        </div>
       </div>
     </div>
-   <!--  <div class="modal-footer">
-      <button type="button" data-dismiss="modal" class="btn btn-default">Close</button>
-      <button type="button" class="btn btn-primary">Save changes</button>
-    </div> -->
   </div>  
 </div>
 
